[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cell-tracker"
version = "0.1.0"
description = "Winning-architecture cell tracking pipeline for 3D+time microscopy — DoG detection, Temporal 3D U-Net, Node Transformers, ILP optimization, and Two Seeds Logit Blending"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "torch>=2.0",
    "zarr>=2.16",
    "scikit-image>=0.21",
    "scikit-learn>=1.3",
    "networkx>=3.1",
    "tqdm>=4.65",
]

[project.optional-dependencies]
ilp = ["pyscipopt>=5.0", "ilpy"]
full = ["cell-tracker[ilp]", "rustworkx", "tracksdata", "geff"]

[tool.setuptools.packages.find]
include = ["cell_tracker*"]
